main.css
* {
    padding:0;
    margin:0;
  }
  
  html, body {
    height:100%;
    
    display:flex;
    flex-direction:column;
  }
  
  body {
      margin: 0;
      line-height: 1.5;
      text-align: left;
      font-size: 1rem;
      font-weight: 400;
      font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
      background-color: white !important;
  }
  
  @font-face {
    font-family: 'Bebas';
    font-style: normal;
    font-weight: normal;
    src: url("/fonts/BebasNeue-Regular.woff2") format("woff2");
  
  }
  
  #login-form {
      left: calc(50% - 150px);
      top: calc(50% - 185px);
  }
  .display-3 {
      font-family: 'Bebas';
      text-shadow: 2px 2px 10px #141414;
  }
  
  .display-4 {
    font-family: 'Bebas';
  
      color: #bec9f8;
  }
  
  .display-5 {
    font-family: 'Helvetica Neue';
      font-size: 2rem;
  }
  
  .footer {
    width: 100%;
  }

  
  h2 {
    font-size: 32px;
    text-align: center;
  }
  
  h3 {
    font-size: 28px;
    text-align: center;
  }
  
  h4 {
    font-size: 24px;
    text-align: center;
  }
  
  h5 {
    font-size: 20px;
    text-align: center;
  }
  
  h6 {
    font-size: 16px;
    text-align: center;
  }
  
  p {
    font-size: 18px;
  }
  
  #content {
    margin-left: 75px;
    margin-right: 75px;
  }
  
  #content-background {
    margin-top: -50px;
    /* background must come before background-size */
    background: linear-gradient(160deg, lightblue, lightpink, salmon, lightblue);
    background-size: 300% 225%, 100% 100%;
    flex-grow: 1;
    padding-top: 100px;
  }
    
  .right {
    text-align: right;
  }
  
  .center {
    text-align: center;
  }
  
  #canvas_container {
    /* width: 800px;
    height: 450px; */
    overflow: auto;
  }
  
  #submission-contents  {
    overflow-y: scroll;
    overflow-x: visible;
    background-color: black;
    height: 650px;
    width: 568px;
  }

  .file-line {
    font-size: 16px;
    text-indent: -40px; 
    padding-left: 40px;
    color: white;
    line-height: 0.8;
  }

  .file-line-index {
    font-weight: bold;
    color: cyan;
  }

  #tc-table-area {
    height: 300px;
    overflow-y: auto;
  }

  #tc-table-tbody {
    display: block;
    overflow: auto;
    height: 300px;
  }

  .th-tc-num {
    width: 25%;
  }

  .th-tc-pf {
    width: 25%;
  }

  .th-tc-view {
    width: 50%;
  }

  .td-tc-num {
    width: 25%;
  }

  .td-tc-pf {
    width: 25%;
  }

  .td-tc-view {
    width: 50%;
  }

  #tc-out-area {
    overflow-y: scroll;
    overflow-x: visible;
    background-color: black;
  }

  .tc-out-line {
    color: white;
    font-size: 16px;
    line-height: 0.8;
  }

  #debug-contents {
    overflow-y: scroll;
    overflow-x: visible;
    background-color: black;
    width: 568px;
    height: 300px;
  }

  .debug-line {
    font-size: 16px;
    text-indent: -40px; 
    padding-left: 40px;
    color: white;
    line-height: 0.8;
  }

  .debug-line-index {
    font-weight: bold;
    color: cyan;
  }

  #debug-table-area {
    height: 310px;
    width: 568px;
    overflow-y: auto;
    word-break: break-word;
  }

  #debug-table-tbody{
    display: block;
    overflow: auto;
    height: 345px;
  }

  .th-debug-name {
    width: 20%;
    font-size: 16px;
  }

  .th-debug-type {
    width: 20%;
    font-size: 16px;
  }

  .th-debug-value {
    width: 60%;
    font-size: 16px;
  }

  .td-debug-name {
    width: 20%;
    font-size: 16px;
  }

  .td-debug-type {
    width: 20%;
    font-size: 16px;
  }

  .td-debug-value {
    width: 60%;
    font-size: 16px;
  }

  #logout-section {
    position: absolute;
    top: 100px;
    right: 100px;
  }

  #signup-section {
    position: absolute;
    top: 100px;
    right: 175px;
  }

  #viz-canvas-area {
    width: 568px;
    height: 650px;
  }

  #run-viz-speed-label {
    width: 50px;
    display: inline;
  }

